fix project bug on mobile screen size

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,7 +131,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  transition: 0.5s;
+  transition: 0.3s;
   padding: 10px;
   text-decoration: none;
 }
@@ -142,7 +142,7 @@
   width: calc(100% + 2px);
   height: calc(100% + 2px);
   border-radius: 4px;
-  transition: 0.5s cubic-bezier(0.5, -0.5, 0.25, 1.5);
+  transition: 0.3s cubic-bezier(0.5, -0.5, 0.25, 1.5);
   top: -1px;
   left: -1px;
   z-index: -1;
